--- a/views/index.pug
+++ b/views/index.pug
@@ -5,3 +5,5 @@ html
     link(rel="stylesheet", href="/static/css/main.css")
   body
     h1 Welcome to this business
+    script(src="/static/bundle.js", type="text/javascript")
+    
